switch from Digest::SHA1 to Digest::SHA which is in core
Patch by Jonas Smedegaard <dr@jones.dk>

--- a/README
+++ b/README
@@ -72,7 +72,7 @@ REQUIREMENTS
     Net::LibIDN
         For stringprep profiles to handle JIDs.
 
-    Digest::SHA1
+    Digest::SHA
         For component authentication and old-style authentication.
 
     And yes, all these are essential for XMPP communication. Even though
